Version 17.x-2.4.5
-------------
* Updated version scheme to support multiple versions of Kodi
* Updated API keys for external services, allow API key override #309
* Add OnResume to websockets notifications #328
* Updated opensans-light font files for improved multilingual support #297
* Add PAL SD video size to streams helper #315
* New literals and some corrections #317
* Improved Chinese translation #321
* Czech translation #312
* Portuguese translation #304
* Hungarian translations #296
* Add support for vim-like hjkl movement keys. #278
* Dutch translation of keybind-readme.md #279
* Update pngs with optimized versions #263
* Update fanart with optimized versions #263

Version 2.4.4
-------------
* Added year to movie edit form #231
* Added additional keys 61/173 for vol control and removed tab from whitelist #242
* Fixed media progress bar appearing over filters bar #253
* Fixed issue with volume resetting to 50% in local playback song change #254 #230 #235
* Removed debugging that was spamming console
* Polish translation - updates #249

Version 2.4.3
-------------
* Fixed context menu in browser #226
* Fixed BBcode tag stripping in browser #223
* Added party mode functionality to local browser player #218
* Updated to latest Soundmanager2 (297a-20150601)
* Fixed selecting kodi/local/auto player on load
* Updated Polish translation #227
* German language updates #225

Version 2.4.2
-------------
* Added trailer selector to movie editor
* Added ability to quit, shutdown, reboot, suspend and hibernate when remote power button clicked #28
* Attempt to reconnect to websockets after closed connection #15
* Added ability to select all items from a set and perform action on items #156
* Added tooltip with episode air date to episode teaser #170
* Added ChromeCast support to local video player #220
* Changed all video player libs to local assets, Minor style and bugfixes #219
* Volume can now be controlled via - and = keys for keyboards without numpad #202