@@ -3107,7 +3107,7 @@ this.Kodi.module("KodiEntities", function(KodiEntities, App, Backbone, Marionett
     fields: {
       minimal: ['thumbnail'],
       small: ['playcount', 'artistid', 'artist', 'genre', 'albumlabel', 'year', 'dateadded', 'style'],
-      full: ['fanart', 'mood', 'description', 'genreid', 'rating', 'type', 'theme']
+      full: ['fanart', 'mood', 'description', 'rating', 'type', 'theme']
     },
     getAlbum: function(id, options) {
       var album;
