@@ -1,5 +1,6 @@
-<h2 id="version-17-x-2-4-5">Version 17.x-2.4.5</h2>
+<h2 id="version-18-x-2-4-5">Version 18.x-2.4.5</h2>
 <ul>
+<li>Fixed issue with unable to view album page in Kodi Leia (v18) #327</li>
 <li>Updated version scheme to support multiple versions of Kodi</li>
 <li>Updated API keys for external services, allow API key override #309</li>
 <li>Add OnResume to websockets notifications #328</li>
