@@ -1,6 +1,6 @@
 {
   "name": "kodi-webinterface",
-  "version": "17.x-2.4.5",
+  "version": "18.x-2.4.5",
   "dependencies": {},
   "devDependencies": {
     "grunt": "~0.4.2",
